--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+:root {
+  --clr-primary: #ff2a9d;
+  --clr-secondary: #ffe20c;
+  --clr-tertiary: #00dcdd;
+}
+
+* {
+  -webkit-font-smoothing: subpixel-antialiased;
+
+  &::selection {
+    background-color: var(--clr-primary);
+    color: white;
+  }
+}
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
