--- a/src/app/shared/ui/navigation/subbar/subbar-invoice/subbar-invoice.component.html
+++ b/src/app/shared/ui/navigation/subbar/subbar-invoice/subbar-invoice.component.html
@@ -32,7 +32,7 @@
         </mat-optgroup>
       </mat-select>
     </mat-form-field>
-    <mat-form-field class="mt-4 -mb-1">
+    <mat-form-field class="mt-4 -mb-1" floatLabel="always">
       <mat-label>Enter a date range</mat-label>
       <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
         <input matStartDate formControlName="start" placeholder="Start date" />
@@ -44,12 +44,12 @@
       ></mat-datepicker-toggle>
       <mat-date-range-picker #picker></mat-date-range-picker>
 
-      <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')"
-        >Invalid start date</mat-error
-      >
-      <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')"
-        >Invalid end date</mat-error
-      >
+      <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">
+        Invalid start date
+      </mat-error>
+      <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">
+        Invalid end date
+      </mat-error>
     </mat-form-field>
   </div>
   <nav class="flex items-center gap-4">
