starting to implement platform_id

--- a/src/app/shared/ui/navigation/navbar/navbar.component.html
+++ b/src/app/shared/ui/navigation/navbar/navbar.component.html
@@ -25,10 +25,13 @@
       <mat-tab-nav-panel #tabPanel></mat-tab-nav-panel>
     </div>
 
-    <div
-      class="rounded-full px-6 py-2 bg-stone-50 text-sm font-bold hover:shadow-lg hover:-translate-y-[2px] transition-all duration-300 active:shadow-none active:translate-y-[2px] active:scale-95 cursor-pointer"
-    >
-      Abmelden
+    <div class="flex items-center gap-4">
+      <app-settings-deliverect-token></app-settings-deliverect-token>
+      <div
+        class="rounded-full px-6 py-2 bg-stone-50 text-sm font-bold hover:shadow-lg hover:-translate-y-[2px] transition-all duration-300 active:shadow-none active:translate-y-[2px] active:scale-95 cursor-pointer"
+      >
+        Abmelden
+      </div>
     </div>
   </div>
 </header>
