added deliverect-token service

--- a/src/assets/fonts/geist/sans/geist.sans.scss
+++ b/src/assets/fonts/geist/sans/geist.sans.scss
@@ -64,7 +64,7 @@
 
 @font-face {
   font-family: Geist;
-  src: url("./Geist-UltraLight.otf") format("opentype");
+  src: url("./Geist-UltraBlack.otf") format("opentype");
   font-weight: 900;
   font-style: normal;
   font-display: swap;
