--- a/src/app/pages/invoice/invoice.component.html
+++ b/src/app/pages/invoice/invoice.component.html
@@ -1,1 +1,38 @@
-<p>invoice works!</p>
+<section class="bg-[var(--clr-secondary)]">
+  <div class="px-4 2xl:px-0 mx-auto max-w-7xl py-10">
+    <app-progress-boxes></app-progress-boxes>
+    <div
+      class="main-container-with-dent bg-stone-50 rounded-xl mt-10 px-10 pt-6 pb-10 shadow-sm"
+    >
+      <mat-tab-group
+        mat-stretch-tabs="false"
+        mat-align-tabs="start"
+        fitInkBarToContent
+      >
+        <mat-tab>
+          <ng-template mat-tab-label>
+            <fa-icon [icon]="tabIconInvoice()" class="mr-2"></fa-icon>
+            Vorauszahlung
+          </ng-template>
+          <div class="ticket rounded-xl bg-white min-h-[400px] mt-4 p-8">
+            <app-ticket></app-ticket>
+          </div>
+        </mat-tab>
+        <mat-tab>
+          <ng-template mat-tab-label>
+            <fa-icon [icon]="tabIconList()" class="mr-2"></fa-icon>
+            Einzelaufstellung
+          </ng-template>
+          <div class="ticket rounded-xl bg-white min-h-[400px] mt-4"></div>
+        </mat-tab>
+        <mat-tab>
+          <ng-template mat-tab-label>
+            <fa-icon [icon]="tabIconAnalytics()" class="mr-2"></fa-icon>
+            Auswertung
+          </ng-template>
+          <div class="ticket rounded-xl bg-white min-h-[400px] mt-4"></div>
+        </mat-tab>
+      </mat-tab-group>
+    </div>
+  </div>
+</section>
