--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -1,12 +1,3 @@
 <main class="max-w-7xl 3xl:max-w-[1440px] mx-auto">
-  <div class="grid grid-cols-[2fr,1fr] gap-8 pt-14">
-    <div class="rounded-xl border py-28 px-10">
-      <app-button-primary
-        [options]="btnOptions()"
-        [routerLink]="['/', 'invoice']"
-        >Zur Abrechnung</app-button-primary
-      >
-    </div>
-    <div class="rounded-xl border py-28"></div>
-  </div>
+  <app-landing-main-grid></app-landing-main-grid>
 </main>
