--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 @tailwind utilities;
 
 @import "./assets/fonts/geist/geist.font.scss";
+@import "./assets/scss/theme.scss";
 
 :root {
   --clr-primary: #ff2a9d;
