--- a/src/app/pages/invoice/invoice.component.html
+++ b/src/app/pages/invoice/invoice.component.html
@@ -1,8 +1,24 @@
 <section class="bg-[var(--clr-secondary)]">
   <div class="px-4 2xl:px-0 mx-auto max-w-7xl py-10">
+    <div
+      class="text-brutalism-shadow w-fit mb-6 ml-4 text-4xl sm:text-5xl font-black"
+      style="color: var(--primary-color)"
+    >
+      <span
+        class="p-10"
+        *ngIf="dateSelectionService.selectedTimePeriod() as dss"
+      >
+        {{ dss.from | date : "dd." }} -
+        {{ dss.to | date : "dd. MMMM" }}
+      </span>
+      <span class="text-clipped block uppercase mt-4 w-fit">Vorauszahlung</span>
+    </div>
+    <p class="font-black text-xs text-stone-700/60 uppercase ml-4 tracking-[0.2em]">
+      Laufende Auszahlungsperiode
+    </p>
     <app-progress-boxes></app-progress-boxes>
     <div
-      class="main-container-with-dent bg-stone-50 rounded-xl mt-10 px-10 pt-6 pb-10 shadow-sm"
+      class="main-container-with-dent bg-stone-100 rounded-xl mt-10 px-10 pt-6 pb-10 shadow-sm"
     >
       <mat-tab-group
         mat-stretch-tabs="false"
@@ -14,7 +30,7 @@
             <fa-icon [icon]="tabIconInvoice()" class="mr-2"></fa-icon>
             Vorauszahlung
           </ng-template>
-          <div class="ticket rounded-xl bg-white min-h-[400px] mt-4 p-8">
+          <div class="ticket rounded-xl bg-white min-h-[400px] mt-4 p-8 overflow-hidden">
             <app-ticket></app-ticket>
           </div>
         </mat-tab>
