--- a/src/app/shared/ui/ticket/ticket-divider/ticket-divider.component.html
+++ b/src/app/shared/ui/ticket/ticket-divider/ticket-divider.component.html
@@ -1,1 +1,4 @@
-<div class="border-b-2 my-4 border-dashed border-stone-100"></div>
+<div
+  class="border-b-2 my-8 border-dashed border-stone-100"
+  [ngClass]="{holes}"
+></div>
